src/test/ui/rfc-2632-const-trait-impl/super-traits-fail.stderr
error[E0277]: the trait bound `S: ~const Foo` is not satisfied
  --> $DIR/super-traits-fail.rs:15:12
   |
LL | impl const Bar for S {}
   |            ^^^ the trait `~const Foo` is not implemented for `S`
   |
note: the trait `Foo` is implemented for `S`, but that implementation is not `const`
  --> $DIR/super-traits-fail.rs:15:12
   |
LL | impl const Bar for S {}
   |            ^^^
note: required by a bound in `Bar`
  --> $DIR/super-traits-fail.rs:8:12
   |
LL | trait Bar: ~const Foo {}
   |            ^^^^^^^^^^ required by this bound in `Bar`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl const Bar for S where S: ~const Foo {}
   |                      +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
